job post z-index fix

--- a/public/css/front/app.css
+++ b/public/css/front/app.css
@@ -14687,10 +14687,22 @@ input[type=number]::-webkit-outer-spin-button {
   }
 }
 
+.custom-file {
+  border-color: transparent !important;
+}
+
 .custom-file input {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.custom-file .is-invalid {
+  border-color: transparent !important;
+}
+
+.custom-file label {
+  border-color: #B2B2B2 !important;
 }
 
 .section-padd {
